--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ release.ps1
 testGrid.dat
 /media
 /media
+main/slabMiddle.dat
+fdtd_fun/visualisation/__pycache__/matplotlib_helpers.cpython-312.pyc
