--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ testGrid.dat
 main/slabMiddle.dat
 fdtd_fun/visualisation/__pycache__/matplotlib_helpers.cpython-312.pyc
 *.pyc
+main/LongPair/longPair.dat
+main/LongPair/anilongPair.mp4
+main/TestGrid/anitestGrid.mp4
+main/TestGrid/anitestGrid.mp4
