--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ main/LongPair/longPair.dat
 main/LongPair/anilongPair.mp4
 main/TestGrid/anitestGrid.mp4
 main/TestGrid/anitestGrid.mp4
+main/TestSlab/testSlab.dat
