Made a wrap-around boundary for the slab test
The slab sim does not go crazy on the edges now and I am properly testing an infinite slab, I think.
Testing accuracy, seems it's second-order in the time step for the slab problem at least (can it be greater?)

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ main/LongPair/anilongPair.mp4
 main/TestGrid/anitestGrid.mp4
 main/TestGrid/anitestGrid.mp4
 main/TestSlab/testSlab.dat
+main/TestSlab/anitestSlab.mp4
