--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Build release distributions
         run: >-
-          python -m pip install build
-          python -m build fdtd_fun
+          python3 -m pip install build
+          python3 -m build fdtd_fun
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
