--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -27,9 +27,9 @@ jobs:
           python-version: "3.x"
 
       - name: Build release distributions
-        run: >-
+        run:
           python3 -m pip install build
-          python3 -m build fdtd_fun
+          python3 -m build
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
