--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,9 +26,12 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: Build release distributions
+      - name: Get build
         run:
           python3 -m pip install build
+          
+      - name: Build release distributions
+        run:
           python3 -m build
 
       - name: Upload distributions
