Added primitive boundary config
Next I need to add current back to the boundary, unless I remember why I removed it in the first place

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ main/TestGrid/anitestGrid.mp4
 main/TestGrid/anitestGrid.mp4
 main/TestSlab/testSlab.dat
 main/TestSlab/anitestSlab.mp4
+main/Aerial/aerial.dat
