Changed readme and fixed grid loading
If a detector was added to the grid before running it loading it from a file threw an exception - fixed

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ main/TestGrid/anitestGrid.mp4
 main/TestSlab/testSlab.dat
 main/TestSlab/anitestSlab.mp4
 main/Aerial/aerial.dat
+main/TestGrid/ExampleGrid.dat
